# bitespeed

./: LICENSE  README.md  compose.yaml  config.toml  pyproject.toml
api/: app.py  database.py  lifespan.py
api/controller/: contact.py
api/exceptions/: app.py  contact.py
api/models/: contact.py
api/repository/: contact.py
api/service/: contact.py
api/settings/: settings.py
migrations/: V1__create_contact_table.sql
tests/contacts/: test_identify.py
