[project]
name = "bitespeed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.135.1",
    "pydantic[email]>=2.12.5",
    "pydantic-extra-types>=2.11.0",
    "pydantic-settings>=2.13.1",
    "sentry-sdk>=2.54.0",
    "structlog>=25.5.0",
    "uvicorn>=0.41.0",
    "phonenumbers>=9.0.25",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
